git-svn-id: https://plugins.svn.wordpress.org/tradetracker-store/trunk@305828 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/store.css
+++ b/store.css
@@ -5,6 +5,7 @@
 	height:373px;
 	border:solid 1px #999999;
 	position:relative;
+	font-family:"Century Gothic", Times, serif;
 }
 .store-titel {
 	float:left;
@@ -17,6 +18,7 @@
 	font-weight:bold;
 	text-align:center;
 	background-color:#ececed;
+	font-family:"Century Gothic", Times, serif;
 }
 
 .store-image{
