--- a/store.css
+++ b/store.css
@@ -6,6 +6,7 @@
 	border:solid 1px #999999;
 	position:relative;
 	font-family:"Century Gothic", Times, serif;
+	color: #000000;
 }
 .store-titel {
 	float:left;
@@ -19,6 +20,7 @@
 	text-align:center;
 	background-color:#ececed;
 	font-family:"Century Gothic", Times, serif;
+	color: #000000;
 }
 
 .store-image{
@@ -63,6 +65,7 @@
 	line-height:14px;
 	font-size:10px;
 	overflow:auto;
+	color: #000000;
 }
 .store-price{
 	position:absolute;
