git-svn-id: https://plugins.svn.wordpress.org/tradetracker-store/tags/2.1.6@389725 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/store.css
+++ b/store.css
@@ -16,6 +16,7 @@
 	border:0px !important;
 	text-align:center !important;
 	line-height: 2 !important;
+	border-collapse: inherit !important;
 }
 .store-price table tr {
     background: none;
