git-svn-id: https://plugins.svn.wordpress.org/tradetracker-store/trunk@443525 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/js/tabtastic.css
+++ b/js/tabtastic.css
@@ -6,6 +6,7 @@
 .tabset_tabs a.active	{ color:black ! important; background-color:white ! important; border-color:black; border-left-width:1px; cursor:default; border-bottom:white; padding-top:1px; padding-bottom:1px }
 
 .tabset_tabs a.redhelp { color:#00c ! important; background-color:#fedced ! important; }
+.tabset_tabs a.greenpremium { color:#00c ! important; background-color:#ecfedb ! important; }
 
 
 
